@@ -57,6 +57,8 @@ production.
   shouldn't be cached.
 * (bug 52817) Advanced search options are now saved on the search page itself, rather
   than in a dedicated pane in the preferences panel.
+* (bug 17665) Special:WantedPages only lists page which having at least one red link
+  pointing to it.
 
 === Bug fixes in 1.24 ===
 * (bug 49116) Footer copyright notice is now always displayed in user language
